# ArroU

./: .clangd  Build-Test.bat  Build-WiiU.bat  Build-Windows.bat  Build.bat  CMakeLists.txt  CMakePresets.json  Clean.bat  README.md  env.bat
Source/: CMakeLists.txt
Source/App/Test/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
Source/App/WiiU/: CMakeLists.txt  compile_flags.txt  main.cpp
Source/App/Windows/: main.cpp
Source/Bootstrap/Test/: CMakeLists.txt  main.cpp
Source/Bootstrap/WiiU/: CMakeLists.txt  main.cpp
Source/Core/: CMakeLists.txt  Endian.hpp  Logger.cpp  Logger.hpp  RPCMessage.hpp  RPCPC.cpp  RPCPC.hpp  RPCWiiU.cpp  RPCWiiU.hpp  Stream.cpp  Stream.hpp
Source/Interface/: ILogger.hpp  INetwork.hpp  IStream.hpp
Source/Interface/Service/: IPCService.hpp  IWiiUService.hpp
Source/Platform/: CMakeLists.txt
Source/Platform/Test/: CMakeLists.txt  TestLogger.cpp  TestLogger.hpp  TestNetwork.cpp  TestNetwork.hpp  TestPCService.cpp  TestPCService.hpp  TestStream.cpp  TestStream.hpp
ToolChain/: WiiU.cmake
